# libaccint-public

./: .gitignore  .lcovrc  AUTHORS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  commitlint.config.js  libaccint.map  libaccint.pc.in
.github/: CODEOWNERS
.github/workflows/: changelog.yml  coverage.yml  cpu-ci.yml  cuda-ci.yml  docker.yml  docs-ci.yml  gpu-ci.yml  performance.yml  pypi-publish.yml  python-ci.yml  quality-gate.yml  release.yml
cmake/: BackendDetection.cmake  CodeGeneration.cmake  CompilerFlags.cmake  LibAccIntConfig.cmake.in  VectorizationDetection.cmake  abi-version.cmake  version.cmake
docker/: Dockerfile.cpu  Dockerfile.cuda
docs/: Doxyfile.in  Makefile  conf.py  error_handling.md  execution_flow.md  index.rst  performance_tuning.md  requirements.txt
docs/_static/: custom.css
docs/api/: API_REFERENCE.md  API_STABILITY.md  PERFORMANCE_GUIDELINES.md  THREAD_SAFETY.md
docs/benchmarks/: BENCHMARK_METHODOLOGY.md  PERFORMANCE_RESULTS.md  phase3_gpu_results.md
docs/contributing/: quality-gates.md
docs/developer_guide/: architecture.rst  code_style.rst  contributing.rst  testing.rst
docs/notebooks/: 01_matrices_and_basis_sets.ipynb  02_work_units_and_integral_buffers.ipynb  03_fock_matrix_and_screening.ipynb  04_hartree_fock.ipynb
docs/theory/: gpu_optimization.rst  integrals.rst  performance_tuning.rst
docs/user_guide/: BASIS_SETS.md  FAQ.md  GETTING_STARTED.md  GPU_SETUP.md  MIGRATION_GUIDE.md  batch_computation.rst  cookbook.rst  faq.rst  getting-started.rst  index.rst  installation.rst  multi_gpu.md  shellset-batching-migration.md
examples/: CMakeLists.txt  basic_hf_energy.cpp  custom_consumer.cpp  density_fitting.cpp  gpu_fock_build.cpp  gpu_hf_workflow.cpp  hf_calculation.cpp  hf_calculation.py  qmm_embedding.cpp  shellset_batched_1e.cpp  shellset_batched_fock.cpp
examples/mini-apps/: README.md
examples/mini-apps/cpp-hf/: CMakeLists.txt  README.md  main.cpp
examples/mini-apps/python-hf/: README.md  hf.py  large_cluster_buffer_compare_2026-02-24.txt  large_cluster_buffer_compare_followup_2026-02-24.txt  large_cluster_buffer_compare_summary_2026-02-24.txt  large_cluster_runs_2026-02-24.txt  timing_2026-02-24.txt
examples/python/: basic_hf.py  gpu_accelerated_hf.py
examples/python/notebooks/: 01_matrices_and_basis_sets.ipynb  02_work_units_and_integral_buffers.ipynb  03_fock_matrix_and_screening.ipynb  04_hartree_fock.ipynb
include/libaccint/: config.hpp.in  libaccint.hpp
packaging/conda/: meta.yaml
packaging/pypi/: build_wheels.sh  pyproject.toml
packaging/release/: build_release.sh  build_source_release.sh
packaging/spack/: repo.yaml
python/: CMakeLists.txt  README.md  pyproject.toml  setup.py
python/libaccint/: __init__.py  __init__.pyi  convenience.py
python/src/: advanced_bindings.cpp  basis_bindings.cpp  bindings.cpp  buffer_bindings.cpp  consumer_bindings.cpp  convenience_api.cpp  core_types.cpp  engine_bindings.cpp  mpi_bindings.cpp  operator_bindings.cpp  screening_bindings.cpp
python/tests/: __init__.py  benchmark_results.json  test_advanced_operators.py  test_basis.py  test_basis_loading.py  test_buffers.py  test_comprehensive_benchmark.py  test_comprehensive_validation.py  test_convenience.py  test_core_types.py  test_dispatch_screening.py  test_engine.py  test_fock_builder.py  test_integration.py  test_operators.py  test_phase14_api.py  test_screening.py
scripts/: benchmark_report.py  build_mini_apps.sh  bump-version.sh  bump_version.py  download_basis_sets.py  generate_spherical_coefficients.py  release-branch.sh  validate_build_pipeline.sh  validate_version.py  version_info.py
share/basis_sets/: 3-21g.json  6-31++g_ss.json  6-31+g_st.json  6-311++g_ss.json  6-311+g_ss.json  6-311+g_st.json  6-311g.json  6-311g_ss.json  6-311g_st.json  6-31g.json  6-31g_ss.json  6-31g_st.json  ATTRIBUTION.md  aug-cc-pv5z.json  aug-cc-pvdz.json  aug-cc-pvqz.json  aug-cc-pvtz.json  cc-pv5z-jkfit.json  cc-pv5z-rifit.json  cc-pv5z.json  cc-pvdz-rifit.json  cc-pvdz.json  cc-pvqz-jkfit.json  cc-pvqz-rifit.json  cc-pvqz.json  cc-pvtz-jkfit.json  cc-pvtz-rifit.json  cc-pvtz.json  def2-qzvp-rifit.json  def2-qzvp.json  def2-qzvpd.json  def2-qzvpp.json  def2-qzvppd.json  def2-svp-rifit.json  def2-svp.json  def2-svpd.json  def2-tzvp-rifit.json  def2-tzvp.json  def2-tzvpd.json  def2-tzvpp.json  (+4 more)
src/: CMakeLists.txt
src/mpi/: mpi_engine.cpp  mpi_fock_builder.cpp  mpi_guard.cpp
src/shared/: backend.cpp  libaccint.cpp
tests/: CMakeLists.txt  test_build_pipeline.sh
tests/benchmark/: bench_boys.cpp  bench_comprehensive.cpp  bench_cpu_optimization.cpp  bench_cpu_vs_gpu.cpp  bench_df_performance.cpp  bench_dispatch_overhead.cpp  bench_eri_warp_vs_thread.cu  bench_fock_build.cpp  bench_gpu_integrals.cpp  bench_gpu_optimization.cpp  bench_helpers.hpp  bench_hf_endtoend.cpp  bench_high_am.cpp  bench_kernel_microbenchmarks.cpp  bench_memory_pool.cpp  bench_multi_gpu_scaling.cpp  bench_optimal_dispatch.cpp  bench_pipeline_vs_sequential.cu  bench_profile_pipeline.cu  bench_scaling.cpp  bench_screening.cpp  bench_stream_overlap.cu  bench_water_cluster_scaling.cpp  cpu_benchmark_results.md  phase_4_5_batched_execution_baseline.md  phase_4_5_batched_execution_results.md
tests/data/: boys_reference.json  rys_reference.json
tests/integration/: h2o4_fixture.hpp  test_batch_statistics.cpp  test_batched_1e_workflow.cpp  test_batched_2e_workflow.cpp  test_dd_integrals.cpp  test_eri_tensor_api.cpp  test_gpu_correctness.cpp  test_hf_energy.cpp  test_high_am_integrals.cpp  test_higher_am.cpp  test_one_electron.cpp  test_parallel_scaling.cpp  test_pipelined_eri.cpp  test_property_integrals.cpp  test_range_separated_eri.cpp  test_screening_integration.cpp  test_spherical_integrals.cpp  test_two_electron.cpp
tests/reference/: COMPLETION_INSTRUCTIONS.md  INSTALLATION.md  README.md  generate_higher_am_reference.py  generate_math_reference.py  generate_reference.py  generate_water_cluster_reference.py  install_requirements.sh  requirements.txt  (+3 more)
(+430 files in other folders)
